--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,6 +39,9 @@ jobs:
     - name: Make Gradle Wrapper executable
       run: chmod +x ./gradlew
 
+    - name: Build with Maven
+      run: mvn clean install
+        
     - name: Build with Gradle
       run: ./gradlew build
 
