--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,22 +34,18 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-    
-
-    - name: Make Gradle Wrapper executable
-      run: chmod +x ./gradlew
-
-    - name: Build with Maven
-      run: mvn clean install
-        
-    - name: Build with Gradle
-      run: ./gradlew build
-
+      
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
-        languages: ${{ matrix.language }}
-        build-mode: ${{ matrix.build-mode }}
+        languages: java
+        build-mode: manual
+          
+    - name: Build with Maven
+      run: mvn install
+        
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3
 
     - if: matrix.build-mode == 'manual'
       shell: bash
