--- a/.github/workflows/codeql2.yml
+++ b/.github/workflows/codeql2.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         include:
         - language: java-kotlin
-          build-mode: autobuild
+          build-mode: manual
 
     steps:
     - name: Checkout repository
